http/http-example-docker-kubernetes/k8s/celery-beat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-beat-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-beat
  template:
    metadata:
      labels:
        app: celery-beat
    spec:
      containers:
      - name: beat
        image: cemakpolat/iot-server:latest
        command: ["/bin/sh", "-c"]
        args:
        - "/wait-for-it.sh timescaledb-service:5432 && /wait-for-it.sh redis-service:6379 && celery -A celery_app.celery beat --loglevel=info"
