http/http-example-docker-kubernetes/k8s/celery-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
      - name: worker
        image: cemakpolat/iot-server:latest
        command: ["/bin/sh", "-c"]
        args:
        - "/wait-for-it.sh timescaledb-service:5432 && /wait-for-it.sh redis-service:6379 && celery -A celery_app.celery worker --loglevel=info"
