http/http-example-docker-kubernetes/k8s/iot-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-server-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: iot-server
  template:
    metadata:
      labels:
        app: iot-server
    spec:
      containers:
      - name: server
        image: cemakpolat/iot-server:latest
        command: ["/bin/sh", "-c"]
        args:
        - "/wait-for-it.sh timescaledb-service:5432 && /wait-for-it.sh redis-service:6379 && python -m init_db && /start.sh"
        ports:
        - containerPort: 80
        startupProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 10
